# AdversarialAttack

./: README.md  download_models.py  main.py  pyproject.toml
backend/: main.py  models.py  requirements.txt  utils.py
backend/attacks/: __init__.py  blur.py  fgsm.py  patch.py  pgd.py  sp_noise.py
frontend/: app.py
